tests/ui/g-loop-continue-wrong-control-kind.stderr
error[E0080]: evaluation panicked: control handling mismatch
 --> src/global.rs
  |
  |         ControlLabelSpec::from_message::<L, K>(ControlHandling::External);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `<hibana::global::Message<hibana::global::LabelMarker<48>, hibana::substrate::cap::GenericCapToken<hibana::substrate::cap::advanced::LoopContinueKind>, hibana::g::advanced::ExternalControl<hibana::substrate::cap::advanced::LoopContinueKind>> as hibana::global::MessageControlSpec>::CONTROL_SPEC` failed inside this call
  |
note: inside `hibana::global::ControlLabelSpec::from_message::<hibana::global::LabelMarker<48>, LoopContinueKind>`
 --> $RUST/core/src/panic.rs
  |
  |         $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
  |
 ::: src/global.rs
  |
  |             panic!("control handling mismatch");
  |             ----------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/global.rs
  |
  |         LoopControlMeaning::from_control_spec(Some(<Msg as MessageControlSpec>::CONTROL_SPEC))
  |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/program.rs
  |
  |         <StepCons<SendStep<From, To, Msg, LANE>, StepNil> as TailLoopControl>::IS_LOOP_CONTROL,
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/program.rs
  |
  |         let _ = <Steps as BuildProgramSource>::SOURCE.scope_budget();
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn Program::<StepCons<SendStep<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<48>, GenericCapToken<LoopContinueKind>, ExternalControl<LoopContinueKind>>>, StepNil>>::build`
 --> src/global.rs
  |
  |     Program::build()
  |     ^^^^^^^^^^^^^^^^
